# Creditra-Contracts

./: .gitignore  COVERAGE_NOTE.md  Cargo.toml  PAGINATION_IMPLEMENTATION_SUMMARY.md  PR_255_DESCRIPTION.md  PR_267_DESCRIPTION.md  PR_603_DESCRIPTION.md  PR_DESCRIPTION.md  README.md  WHITEPAPER.md  build_errors.txt  cargo_test_output.txt  cargo_test_output2.txt  credit_errors.txt  credit_errors2.txt  errors.txt  package-lock.json  test_coverage.md  test_out.txt  with_changes.txt  without_changes.txt
.cargo/: config.toml
.github/workflows/: api-version-guard.yml  build-hygiene.yml  build-wasm.yml  ci.yml  coverage.yml  kani.yml  test.yml  (+1 more)
contracts/: .gas-baseline.json
contracts/credit/tests/mocks/simple_price_oracle/: Cargo.toml  README.md
contracts/credit/tests/mocks/simple_price_oracle/src/: lib.rs
contracts/creditra-credit/: Cargo.toml
contracts/creditra-credit/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  views.rs
coverage/: tarpaulin-report.html
docs/: ARCHITECTURE.md  COVERAGE.md  CROSS_CONTRACT_HANDSHAKE.md  ERROR_CODES.md  EVENTS_CATALOG.md  EVENT_SCHEMA.md  EXECUTION_QUALITY.md  GLOSSARY.md  INDEX.md  PROTOCOL_SPEC.md  RISK_PRICING.md  SECURITY.md  STORAGE_LAYOUT.md  contract-errors.md  contributing-tests.md  credit.md  error-taxonomy.md  errors.md  events-schema.md  indexer-integration.md  integration-initialization.md  state-machine.md  storage-layout.md  storage-tiers.md  threat-model.md  upgrade-policy.md
examples/: budget_baseline.rs
scripts/: README.md  regen_budget_baseline.sh  wasm-size-baseline.json  wasm-size-baseline.sh
(+272 files in other folders)
