[package]
name = "creditra-credit"
version = "0.1.0"
edition = "2021"
description = "Credit line management contract with draw audit trail"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2", features = ["staking"] }
cosmwasm-schema = "2"
cw-storage-plus = "2"
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
thiserror = "2"
